--- a/client/src/containers/App.css
+++ b/client/src/containers/App.css
@@ -12,6 +12,11 @@
   box-shadow: 0 2px 8px #f0f1f2;
 }
 
-.ant-card { 
+.ant-card {
   box-shadow: 0 2px 8px #f0f1f2;
 }
+
+.ant-list {
+  box-shadow: 0 2px 8px #f0f1f2;
+}
+
