--- a/client/src/containers/App.css
+++ b/client/src/containers/App.css
@@ -1,13 +1,30 @@
 @import '~antd/dist/antd.css';
+@import url('https://fonts.googleapis.com/css?family=Fira+Sans|Rubik');
+
+html {
+  font-family: 'Fira Sans';
+}
 
 .ant-btn-primary {
-  background-color: #0f2ff1
+  background-color: #0f2ff1;
 }
 
 .ant-menu-horizontal {
-  text-align: right
+  text-align: right;
+}
+
+.ant-list {
+  font-family: 'Rubik';
+}
+
+.ant-layout-content {
+  border-top: 1px solid #cacad9;
 }
 
 .ant-menu {
-  box-shadow: 0 2px 8px #f0f1f2;
+  box-shadow: 0 0 10px 0 rgba(0,0,0,.12), 0 2px 3px 0 rgba(0,0,0,.16);
+  background-color: #fff;
+  border-bottom: 1px solid #cacad9;
+  font-family: 'Fira Sans';
 }
+
