--- a/client/src/containers/App.css
+++ b/client/src/containers/App.css
@@ -51,12 +51,12 @@ body {
 }
 
 li.ant-menu-item-active {
-  color: black;
+  color: #1d2129;
 }
 
 
 .ant-menu-item-group-list .ant-menu-item {
-  color: black;
+  color: #1d2129;
 }
 
 .ant-menu-item-group-list .ant-menu-item:hover {
@@ -65,6 +65,28 @@ li.ant-menu-item-active {
 
 .ant-menu-horizontal > .ant-menu-item:hover {
   color: #f6f6f6;
+}
+
+.ant-list-item {
+  background-color: #eff1f3;
+  border-radius: 3px;
+  margin-top: 20px;
+}
+
+.ant-list-item-main {
+  padding: 15px 40px;
+}
+
+.ant-list-item-extra {
+  position: relative;
+}
+
+.ant-list-item-extra img {
+  position: absolute;
+  top: 3%;
+  margin-left: -250px;
+  width: 230px;
+  height: 230px;
 }
 
 ul.ant-card-actions: {
